fixing options list to be behind modal

--- a/app/assets/stylesheets/defaults.scss
+++ b/app/assets/stylesheets/defaults.scss
@@ -113,6 +113,7 @@ td {
   left: 0;
   background-color: rgba(66, 66, 66, 0.8);
   display: none;
+  z-index: 1000;
 }
 
 .modal {
