--- a/app/assets/stylesheets/z_periods.scss
+++ b/app/assets/stylesheets/z_periods.scss
@@ -23,8 +23,8 @@
   z-index: 1000;
   padding: 10px;
   padding-top: 0;
-  right: -131px;
-  width: 80%;
+  right: -367px;
+  width: 50%;
   top: 32px;
 }
 
